--- a/index.html
+++ b/index.html
@@ -7,63 +7,65 @@
 </head>
 <body>
 	<div class="slider">
-		<div class="slider-item">
-			<div class="slider-item__header">
-				<div class="slider-item__title">
-					<p>ЮК Jurimex.</p>
+		<div class="wrapper">
+			<div class="slider-item">
+				<div class="slider-item__header">
+					<div class="slider-item__title">
+						<p>ЮК Jurimex.</p>
+					</div>
+					<div class="slider-item__number">
+						<p>1/3</p>
+						<div class="slider-item__progress"><div></div></div>
+					</div>
 				</div>
-				<div class="slider-item__number">
-					<p>1/3</p>
-					<button>Кнопка с текстом</button>
+				<div class="slider-item__center">
+					<h1>Ваш надежный партнер в правовом поле</h1>
+					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Porro accusamus suscipit asperiores minima id, quidem ut corrupti consequuntur error saepe fugiat eos enim ipsa distinctio possimus cumque autem expedita minus, omnis inventore iste nesciunt. Aliquid suscipit voluptas ab temporibus animi! Rem, sed, ut? Praesentium ullam laborum illum magni quod eligendi.</p>
+					<a href="#">Больше о компании</a>
 				</div>
-			</div>
-			<div class="slider-item__center">
-				<h1>Ваш надежный партнер в правовом поле</h1>
-				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Porro accusamus suscipit asperiores minima id, quidem ut corrupti consequuntur error saepe fugiat eos enim ipsa distinctio possimus cumque autem expedita minus, omnis inventore iste nesciunt. Aliquid suscipit voluptas ab temporibus animi! Rem, sed, ut? Praesentium ullam laborum illum magni quod eligendi.</p>
-				<a href="#">Больше о компании</a>
-			</div>
-			<div class="more">
-				<a href="#" >Листайте вниз</a>
-				<p></p>
-			</div>
-		</div>
-		<div class="slider-item">
-			<div class="slider-item__header">
-				<div class="slider-item__title">
-					<p>ЮК Jurimex.</p>
-				</div>
-				<div class="slider-item__number">
-					<p>1/3</p>
-					<button>Кнопка с текстом</button>
+				<div class="more">
+					<a href="#" >Листайте вниз</a>
+					<p></p>
 				</div>
 			</div>
-			<div class="slider-item__center">
-				<h1>Ваш надежный партнер в правовом поле</h1>
-				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Porro accusamus suscipit asperiores minima id, quidem ut corrupti consequuntur error saepe fugiat eos enim ipsa distinctio possimus cumque autem expedita minus, omnis inventore iste nesciunt. Aliquid suscipit voluptas ab temporibus animi! Rem, sed, ut? Praesentium ullam laborum illum magni quod eligendi.</p>
-				<a href="#">Больше о компании</a>
-			</div>
-			<div class="more">
-				<a href="#" >Листайте вниз</a>
-				<p></p>
-			</div>
-		</div><div class="slider-item">
-			<div class="slider-item__header">
-				<div class="slider-item__title">
-					<p>ЮК Jurimex.</p>
+			<div class="slider-item">
+				<div class="slider-item__header">
+					<div class="slider-item__title">
+						<p>ЮК Jurimex.</p>
+					</div>
+					<div class="slider-item__number">
+						<p>2/3</p>
+						<div class="slider-item__progress"><div></div></div>
+					</div>
 				</div>
-				<div class="slider-item__number">
-					<p>1/3</p>
-					<button>Кнопка с текстом</button>
+				<div class="slider-item__center">
+					<h1>Ваш надежный партнер в правовом поле</h1>
+					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Porro accusamus suscipit asperiores minima id, quidem ut corrupti consequuntur error saepe fugiat eos enim ipsa distinctio possimus cumque autem expedita minus, omnis inventore iste nesciunt. Aliquid suscipit voluptas ab temporibus animi! Rem, sed, ut? Praesentium ullam laborum illum magni quod eligendi.</p>
+					<a href="#">Больше о компании</a>
 				</div>
-			</div>
-			<div class="slider-item__center">
-				<h1>Ваш надежный партнер в правовом поле</h1>
-				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Porro accusamus suscipit asperiores minima id, quidem ut corrupti consequuntur error saepe fugiat eos enim ipsa distinctio possimus cumque autem expedita minus, omnis inventore iste nesciunt. Aliquid suscipit voluptas ab temporibus animi! Rem, sed, ut? Praesentium ullam laborum illum magni quod eligendi.</p>
-				<a href="#">Больше о компании</a>
-			</div>
-			<div class="more">
-				<a href="#" >Листайте вниз</a>
-				<p></p>
+				<div class="more">
+					<a href="#" >Листайте вниз</a>
+					<p></p>
+				</div>
+			</div><div class="slider-item">
+				<div class="slider-item__header">
+					<div class="slider-item__title">
+						<p>ЮК Jurimex.</p>
+					</div>
+					<div class="slider-item__number">
+						<p>3/3</p>
+						<div class="slider-item__progress"><div></div></div>
+					</div>
+				</div>
+				<div class="slider-item__center">
+					<h1>Ваш надежный партнер в правовом поле</h1>
+					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Porro accusamus suscipit asperiores minima id, quidem ut corrupti consequuntur error saepe fugiat eos enim ipsa distinctio possimus cumque autem expedita minus, omnis inventore iste nesciunt. Aliquid suscipit voluptas ab temporibus animi! Rem, sed, ut? Praesentium ullam laborum illum magni quod eligendi.</p>
+					<a href="#">Больше о компании</a>
+				</div>
+				<div class="more">
+					<a href="#" >Листайте вниз</a>
+					<p></p>
+				</div>
 			</div>
 		</div>
 	</div>
